@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-03-29T08:15:25Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_prev_day_inc" : 1,
+  "timestamp" : "2022-03-29T16:17:25Z",
+  "count" : 2,
+  "count_minmax" : [ 1, 2 ],
+  "count_prev_day_inc" : 2,
   "count_prev_day_dec" : 0,
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_prev_day_inc" : 1,
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_prev_day_inc" : 2,
   "uniques_prev_day_dec" : 0
 }
