@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-29T08:15:25Z",
+  "timestamp" : "2022-03-29T16:17:25Z",
   "count_outdated" : 101,
   "uniques_outdated" : 18,
-  "count" : 125,
-  "uniques" : 25,
+  "count" : 126,
+  "uniques" : 26,
   "views" : [
     {
       "timestamp": "2022-03-20T00:00:00Z",
@@ -35,10 +35,10 @@
     },
     {
       "timestamp": "2022-03-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
