@@ -1,6 +1,6 @@
 {
-  "count": 24,
-  "uniques": 5,
+  "count": 25,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2022-03-20T00:00:00Z",
@@ -24,8 +24,8 @@
     },
     {
       "timestamp": "2022-03-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
